[gd_scene load_steps=19 format=2]

[ext_resource path="res://Sprites/Goblin/Attack.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Goblin.gd" type="Script" id=2]
[ext_resource path="res://Sprites/Goblin/Idle.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Goblin/Run.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Goblin/Take Hit.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Goblin/Death.png" type="Texture" id=6]
[ext_resource path="res://SFX/Goblin_attack.wav" type="AudioStream" id=7]
[ext_resource path="res://SFX/Goblin_onDeath.wav" type="AudioStream" id=8]
[ext_resource path="res://SFX/Goblin_hit.wav" type="AudioStream" id=9]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 30.0908, 32.2679 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 24.1489, 36.282 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 32.1418, 29.1015 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 32.6962, 25.6082 )

[sub_resource type="Animation" id=5]
length = 0.65
loop = true
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Animations/Attack:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.08, 0.16, 0.25, 0.34, 0.43, 0.52 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 3, 4, 5, 6, 7 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.43, 0.52, 0.61 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"values": [ {
"args": [  ],
"method": "hit"
}, {
"args": [  ],
"method": "end_of_hit"
}, {
"args": [  ],
"method": "start_run"
} ]
}

[sub_resource type="Animation" id=6]
length = 0.35
tracks/0/type = "value"
tracks/0/path = NodePath("Animations/Dead:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=7]
length = 0.4
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Animations/Hit:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.12, 0.24, 0.35 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=8]
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Animations/Idle:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=9]
length = 0.65
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Animations/Run:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6 ]
}

[node name="Goblin" type="KinematicBody2D" groups=[
"Enemies",
]]
collision_layer = 2147483651
collision_mask = 2147483651
script = ExtResource( 2 )

[node name="Animations" type="Node2D" parent="."]

[node name="Attack" type="Sprite" parent="Animations"]
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 1 )
hframes = 8

[node name="Run" type="Sprite" parent="Animations"]
visible = false
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 4 )
hframes = 8
frame = 5

[node name="Hit" type="Sprite" parent="Animations"]
visible = false
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 5 )
hframes = 4

[node name="Dead" type="Sprite" parent="Animations"]
visible = false
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 6 )
hframes = 4

[node name="Idle" type="Sprite" parent="Animations"]
visible = false
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 3 )
hframes = 4
frame = 2

[node name="Hitbox" type="Area2D" parent="." groups=[
"Collision",
]]
collision_layer = 2147483655
collision_mask = 7

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2( 0.237547, 7.21143 )
shape = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="." groups=[
"Collision",
]]
position = Vector2( 0.727119, 2.29228 )
shape = SubResource( 2 )

[node name="PlayerDetector" type="Area2D" parent="." groups=[
"Collision",
]]
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetector"]
position = Vector2( 60.2894, 9.36167 )
shape = SubResource( 3 )

[node name="AttackDetector" type="Area2D" parent="." groups=[
"Collision",
]]
monitoring = false
monitorable = false
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackDetector"]
position = Vector2( 59.7607, 12.2151 )
shape = SubResource( 4 )

[node name="EnemyStates" type="AnimationPlayer" parent="."]
anims/ATTACK = SubResource( 5 )
anims/DEAD = SubResource( 6 )
anims/HIT = SubResource( 7 )
anims/IDLE = SubResource( 8 )
anims/RUN = SubResource( 9 )

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2( 26.0422, 12.5658 )
enabled = true
cast_to = Vector2( 0, 28 )

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="Attack" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 7 )
volume_db = -2.0

[node name="Hit" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 9 )
volume_db = -2.0

[node name="Death" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 8 )

[connection signal="body_entered" from="Hitbox" to="." method="_on_Hitbox_body_entered"]
[connection signal="body_entered" from="PlayerDetector" to="." method="_on_PlayerDetector_body_entered"]
[connection signal="body_exited" from="PlayerDetector" to="." method="_on_PlayerDetector_body_exited"]
[connection signal="body_entered" from="AttackDetector" to="." method="_on_AttackDetector_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
